--- a/src/components/shared.module.css
+++ b/src/components/shared.module.css
@@ -201,7 +201,7 @@
   color: rgb(188 200 214 / 0.45);
   text-align: center;
   line-height: 1.3;
-  margin-top: 0.05rem;
+  margin: 0.05rem 0 0;
   user-select: none;
 }
 
